--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^3.12.1
+  cloud_firestore: ^5.6.5
 
 dev_dependencies:
   flutter_test:
